<resources>
    <string name="app_name">AdmitOne</string>
    <string name="skip">Skip</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="presale_tickets">Pre-Sale Tickets</string>
    <string name="presale_tickets_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="start_adventure">Start Adventure</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="upload_later">Upload Later</string>
    <string name="welcome">Welcome,\nEdnagea Almira</string>
    <string name="save_and_next">Save and Next</string>
    <string name="now_playing_caps">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="storyboard">Storyboard</string>
    <string name="pick_seats">Pick Seats</string>
    <string name="movie_screen">MOVIE SCREEN</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="when">When</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_payment">Total Payment</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="insufficient_balance">Your E-Wallet balance is not sufficient to make transaction</string>
    <string name="back_to_home">Back to Home</string>
    <string name="check_my_ticket">Check My Ticket</string>
    <string name="payment_succeed">Payment Succeed!</string>
    <string name="payment_succeed_desc">Your movie ticket has been successfully purchased</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="my_wallet">My Wallet</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_watch_history">Your Watch History</string>
    <string name="quick_print">Quick Print</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="change_lang">Change Language</string>
    <string name="help">Help</string>
    <string name="please_scan_qr">Please scan this QR Code at\nthe nearest ticket counter.</string>
    <string name="close">CLOSE</string>
    <string name="topup_ewallet">Top Up E-Wallet</string>
    <string name="topup_now">Top Up Now</string>
    <string name="topup_amount">Top Up Amount</string>
    <string name="top_up_succeed">Top Up Succeed!</string>
    <string name="top_up_succeed_desc">You have successfully top up\nyour e-wallet.</string>
</resources>