<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkout.CheckoutActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_arrow_back_24" />

    <TextView
        android:id="@+id/tvCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/checkout"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/when"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckout" />

    <LinearLayout
        android:id="@+id/llDateAndTime"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhen">

        <TextView
            android:id="@+id/tvDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_today_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center_vertical"
            android:text="@string/date_and_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDateAndTimeDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="right|center_vertical"
            android:text="23 Oct 2020, 10.30 WIB"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCinema"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDateAndTime">

        <TextView
            android:id="@+id/tvCinema"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_theaters_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center_vertical"
            android:text="@string/cinema"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCinemaDesc"
            android:layout_width="450dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="right|center_vertical"
            android:text="Palembang Icon, Cinema IV"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/items"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCinema" />

    <TextView
        android:id="@+id/tvEWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/e_wallet"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvItems" />

    <LinearLayout
        android:id="@+id/llEWalletBalance"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEWallet">

        <TextView
            android:id="@+id/tvTotalBalance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_account_balance_wallet_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center_vertical"
            android:text="Total Balance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTotalBalanceDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="right|center_vertical"
            tools:text="Rp0"
            android:textColor="@color/colorAccentCyan"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvInsufficientBal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/insufficient_balance"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:drawableLeft="@drawable/ic_round_error_24"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEWalletBalance" />


    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_rectangle_pink"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/pay_now"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_rectangle_secondary"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItems" />

</androidx.constraintlayout.widget.ConstraintLayout>